--- a/compiled/postgres-proxy/manifests/postgres-proxy-bundle.yml
+++ b/compiled/postgres-proxy/manifests/postgres-proxy-bundle.yml
@@ -70,6 +70,39 @@ spec:
                 path: service_account_file
             secretName: postgres-proxy
 ---
+apiVersion: autoscaling.k8s.io/v1beta2
+kind: VerticalPodAutoscaler
+metadata:
+  labels:
+    name: postgres-proxy
+  name: postgres-proxy
+  namespace: postgres-proxy
+spec:
+  resourcePolicy:
+    containerPolicies:
+      - containerName: istio-proxy
+        mode: 'Off'
+  targetRef:
+    apiVersion: apps/v1
+    kind: Deployment
+    name: postgres-proxy
+  updatePolicy:
+    updateMode: Auto
+---
+apiVersion: policy/v1beta1
+kind: PodDisruptionBudget
+metadata:
+  labels:
+    name: postgres-proxy
+  name: postgres-proxy
+  namespace: postgres-proxy
+spec:
+  minAvailable: 2
+  selector:
+    matchLabels:
+      name: postgres-proxy
+      tier: db
+---
 apiVersion: v1
 kind: Service
 metadata:
