Upgrade ingress and improve network policies

--- a/compiled/echo-server/manifests/global-ingress.yml
+++ b/compiled/echo-server/manifests/global-ingress.yml
@@ -1,4 +1,4 @@
-apiVersion: networking.k8s.io/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   labels:
@@ -10,6 +10,9 @@ spec:
     - http:
         paths:
           - backend:
-              serviceName: echo-server
-              servicePort: 80
+              service:
+                name: echo-server
+                port:
+                  number: 80
             path: /echo/*
+            pathType: Prefix
