--- a/inventory/targets/kapicorp/prod-sockshop.yml
+++ b/inventory/targets/kapicorp/prod-sockshop.yml
@@ -17,5 +17,7 @@ parameters:
       domains:
       - sockshop.kapicorp.com
       default_backend:
-        serviceName: frontend
-        servicePort: 80
+        service:
+          name: frontend
+          port:
+            number: 80
