--- a/compiled/echo-server/manifests/echo-server-bundle.yml
+++ b/compiled/echo-server/manifests/echo-server-bundle.yml
@@ -124,6 +124,7 @@ spec:
         - port: 6379
           protocol: TCP
   podSelector:
-    label: test
+    matchLabels:
+      name: echo-server
   policyTypes:
     - Ingress
