--- a/compiled/prod-sockshop/manifests/global-ingress.yml
+++ b/compiled/prod-sockshop/manifests/global-ingress.yml
@@ -1,4 +1,4 @@
-apiVersion: networking.k8s.io/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   annotations:
@@ -10,5 +10,7 @@ metadata:
   namespace: prod-sockshop
 spec:
   backend:
-    serviceName: frontend
-    servicePort: 80
+    service:
+      name: frontend
+      port:
+        number: 80
