--- a/compiled/echo-server/manifests/echo-server-config.yml
+++ b/compiled/echo-server/manifests/echo-server-config.yml
@@ -12,5 +12,5 @@ kind: ConfigMap
 metadata:
   labels:
     name: echo-server
-  name: echo-server
+  name: echo-server-01f3716a
   namespace: echo-server
