--- a/inventory/classes/components/echo-server.yml
+++ b/inventory/classes/components/echo-server.yml
@@ -80,6 +80,7 @@ parameters:
         config:
           mount: /opt/echo-service/echo-service.conf
           subPath: echo-service.conf
+          version: true
           data:
             echo-service.conf:
               template: "components/echo-server/echo-server.conf.j2"
