Rename directive "version" to "versioned"

--- a/inventory/classes/components/mysql.yml
+++ b/inventory/classes/components/mysql.yml
@@ -51,7 +51,7 @@ parameters:
 
       secrets:
         secrets:
-          version: true
+          versioned: true
           data:
             mysql-root-password: 
               value: ?{plain:targets/${target_name}/mysql-root-password||randomstr:32|base64}
