58: Add kadet ingress generator

--- a/compiled/prod-sockshop/manifests/global-ingress.yml
+++ b/compiled/prod-sockshop/manifests/global-ingress.yml
@@ -9,7 +9,7 @@ metadata:
   name: global
   namespace: prod-sockshop
 spec:
-  backend:
+  defaultBackend:
     service:
       name: frontend
       port:
