--- a/inventory/classes/terraform/gcp/gcs-bucket.yml
+++ b/inventory/classes/terraform/gcp/gcs-bucket.yml
@@ -1,28 +1,28 @@
- parameters:
-   kapicorp:
-     resource:
-       google_service_account:
-         terraform:
-           account_id: terraform
-           description: "Terraform Service Account"
-       google_storage_bucket:
-        terraform-state:
-          name: ${state_bucket_name}
-          location: EU
-          storage_class: MULTI_REGIONAL
-       google_storage_bucket_iam_binding:
-         binding:
-           bucket: \${google_storage_bucket.terraform-state.name}
-           role: "roles/storage.admin"
-           members:
-           - serviceAccount:\${google_service_account.terraform.email}
-       google_organization_iam_member:
-         terraform_owner:
-            org_id: 163756623419
-            role: "roles/owner"
-            member: serviceAccount:\${google_service_account.terraform.email}
-         terraform_billing:
-            org_id: 163756623419
-            role: "roles/billing.user"
-            member: serviceAccount:\${google_service_account.terraform.email}
-
+parameters:
+  resources:
+    tf:
+      resource:
+        google_service_account:
+          terraform:
+            account_id: terraform
+            description: "Terraform Service Account"
+        google_storage_bucket:
+          terraform-state:
+            name: ${state_bucket_name}
+            location: EU
+            storage_class: MULTI_REGIONAL
+        google_storage_bucket_iam_binding:
+          binding:
+            bucket: \${google_storage_bucket.terraform-state.name}
+            role: "roles/storage.admin"
+            members:
+            - serviceAccount:\${google_service_account.terraform.email}
+        google_organization_iam_member:
+          terraform_owner:
+              org_id: 163756623419
+              role: "roles/owner"
+              member: serviceAccount:\${google_service_account.terraform.email}
+          terraform_billing:
+              org_id: 163756623419
+              role: "roles/billing.user"
+              member: serviceAccount:\${google_service_account.terraform.email}
