--- a/inventory/classes/terraform/providers/gcp.yml
+++ b/inventory/classes/terraform/providers/gcp.yml
@@ -3,10 +3,11 @@ parameters:
     project: ${target_name}
     region: europe-west1
     zone: europe-west1-b
-  kapicorp:
-    terraform:
-      required_providers:
-        google:
-          version: 3.46.0
-    provider:
-      - google: ${google}
+  resources:
+    tf:
+      terraform:
+        required_providers:
+          google:
+            version: 3.46.0
+      provider:
+        - google: ${google}
