--- a/inventory/targets/terraform/kapicorp-project-123.yml
+++ b/inventory/targets/terraform/kapicorp-project-123.yml
@@ -1,11 +1,7 @@
 classes:
   - common
   - terraform.common
-  - terraform.gcp.billing
-  - terraform.gcp.services
-  - terraform.remote-state
-  - terraform.providers.gcp-impersonate
+  - terraform.project-type.generic
 
 parameters:
   name: Example Terraform Project
-
