add gke resources

--- a/inventory/classes/terraform/project-type/admin.yml
+++ b/inventory/classes/terraform/project-type/admin.yml
@@ -9,6 +9,9 @@ parameters:
     tf:
       resource:
         google_project_service:
+          enable_container_service:
+            service: container.googleapis.com
+            project: \${google_project.project.project_id}
           enable_cloudresourcemanager_service:
             service: cloudresourcemanager.googleapis.com
             project: \${google_project.project.project_id}
