--- a/compiled/kapicorp-demo-march/terraform/google_project_service.tf.json
+++ b/compiled/kapicorp-demo-march/terraform/google_project_service.tf.json
@@ -1,13 +1,5 @@
 {
   "resource": {
-    "google_project": {
-      "project": {
-        "name": "Example Terraform Project",
-        "project_id": "kapicorp-project-123",
-        "billing_account": "017012-945270-0844F0",
-        "org_id": 163756623419
-      }
-    },
     "google_project_service": {
       "enable_cloudbilling_service": {
         "service": "cloudbilling.googleapis.com",
@@ -19,6 +11,10 @@
       },
       "enable_compute_service": {
         "service": "storage-component.googleapis.com",
+        "project": "${google_project.project.project_id}"
+      },
+      "enable_container_service": {
+        "service": "container.googleapis.com",
         "project": "${google_project.project.project_id}"
       }
     }
