--- a/inventory/targets/terraform/kapicorp-demo-march.yml
+++ b/inventory/targets/terraform/kapicorp-demo-march.yml
@@ -2,6 +2,7 @@ classes:
   - common
   - terraform.common
   - terraform.project-type.generic
+  - terraform.gcp.resources.gke
 
 parameters:
   name: Example Terraform Project
