--- a/compiled/dev-sockshop/manifests/catalogue-bundle.yml
+++ b/compiled/dev-sockshop/manifests/catalogue-bundle.yml
@@ -66,6 +66,7 @@ spec:
             readOnlyRootFilesystem: true
             runAsNonRoot: true
             runAsUser: 10001
+      hostNetwork: 'false'
       restartPolicy: Always
       terminationGracePeriodSeconds: 30
 ---
