--- a/compiled/dev-sockshop/manifests/shipping-bundle.yml
+++ b/compiled/dev-sockshop/manifests/shipping-bundle.yml
@@ -67,6 +67,7 @@ spec:
           volumeMounts:
             - mountPath: /tmp
               name: tmp-volume
+      hostNetwork: 'false'
       restartPolicy: Always
       terminationGracePeriodSeconds: 30
       volumes:
