--- a/compiled/dev-sockshop/manifests/user-db-bundle.yml
+++ b/compiled/dev-sockshop/manifests/user-db-bundle.yml
@@ -41,6 +41,7 @@ spec:
           volumeMounts:
             - mountPath: /tmp
               name: tmp-volume
+      hostNetwork: 'false'
       restartPolicy: Always
       terminationGracePeriodSeconds: 30
       volumes:
