--- a/compiled/examples/manifests/filebeat-bundle.yml
+++ b/compiled/examples/manifests/filebeat-bundle.yml
@@ -62,6 +62,7 @@ spec:
             - mountPath: /var/log
               name: varlog
               readOnly: true
+      hostNetwork: true
       restartPolicy: Always
       terminationGracePeriodSeconds: 30
       volumes:
