--- a/compiled/examples/manifests/logstash-bundle.yml
+++ b/compiled/examples/manifests/logstash-bundle.yml
@@ -66,6 +66,7 @@ spec:
               name: config
             - mountPath: /usr/share/logstash/pipeline/
               name: pipelines
+      hostNetwork: 'false'
       restartPolicy: Always
       terminationGracePeriodSeconds: 30
       volumes:
