--- a/compiled/prod-sockshop/manifests/rabbit-mq-bundle.yml
+++ b/compiled/prod-sockshop/manifests/rabbit-mq-bundle.yml
@@ -46,6 +46,7 @@ spec:
               drop:
                 - all
             readOnlyRootFilesystem: true
+      hostNetwork: 'false'
       restartPolicy: Always
       terminationGracePeriodSeconds: 30
 ---
