--- a/compiled/prod-sockshop/manifests/session-db-bundle.yml
+++ b/compiled/prod-sockshop/manifests/session-db-bundle.yml
@@ -38,6 +38,7 @@ spec:
                 - SETUID
               drop:
                 - all
+      hostNetwork: 'false'
       restartPolicy: Always
       terminationGracePeriodSeconds: 30
 ---
