--- a/compiled/sock-shop/manifests/catalogue-db-bundle.yml
+++ b/compiled/sock-shop/manifests/catalogue-db-bundle.yml
@@ -40,6 +40,7 @@ spec:
               protocol: TCP
           securityContext:
             readOnlyRootFilesystem: false
+      hostNetwork: 'false'
       restartPolicy: Always
       terminationGracePeriodSeconds: 30
 ---
