--- a/compiled/sock-shop/manifests/payment-bundle.yml
+++ b/compiled/sock-shop/manifests/payment-bundle.yml
@@ -62,6 +62,7 @@ spec:
             readOnlyRootFilesystem: true
             runAsNonRoot: true
             runAsUser: 10001
+      hostNetwork: 'false'
       restartPolicy: Always
       terminationGracePeriodSeconds: 30
 ---
