hostNetwork is now a  bool instead of string

--- a/compiled/dev-sockshop/manifests/catalogue-db-bundle.yml
+++ b/compiled/dev-sockshop/manifests/catalogue-db-bundle.yml
@@ -40,7 +40,7 @@ spec:
               protocol: TCP
           securityContext:
             readOnlyRootFilesystem: false
-      hostNetwork: 'false'
+      hostNetwork: false
       restartPolicy: Always
       terminationGracePeriodSeconds: 30
 ---
