--- a/compiled/dev-sockshop/manifests/rabbit-mq-bundle.yml
+++ b/compiled/dev-sockshop/manifests/rabbit-mq-bundle.yml
@@ -46,7 +46,7 @@ spec:
               drop:
                 - all
             readOnlyRootFilesystem: true
-      hostNetwork: 'false'
+      hostNetwork: false
       restartPolicy: Always
       terminationGracePeriodSeconds: 30
 ---
