--- a/compiled/tesoro/manifests/tesoro-bundle.yml
+++ b/compiled/tesoro/manifests/tesoro-bundle.yml
@@ -47,7 +47,7 @@ spec:
           volumeMounts:
             - mountPath: /certs
               name: secrets
-      hostNetwork: 'false'
+      hostNetwork: false
       restartPolicy: Always
       serviceAccountName: tesoro
       terminationGracePeriodSeconds: 30
