--- a/compiled/tutorial/manifests/echo-server-bundle.yml
+++ b/compiled/tutorial/manifests/echo-server-bundle.yml
@@ -83,7 +83,7 @@ spec:
             - mountPath: /etc/nginx/conf.d/nginx.conf
               name: config
               subPath: nginx.conf
-      hostNetwork: 'false'
+      hostNetwork: false
       initContainers:
         - command:
             - echo "test"
