--- a/compiled/examples/manifests/mysql-bundle.yml
+++ b/compiled/examples/manifests/mysql-bundle.yml
@@ -46,7 +46,7 @@ spec:
               name: config
             - mountPath: /var/lib/mysql
               name: datadir
-      hostNetwork: 'false'
+      hostNetwork: false
       restartPolicy: Always
       terminationGracePeriodSeconds: 30
       volumes:
