--- a/compiled/gke-pvm-killer/manifests/gke-pvm-killer-bundle.yml
+++ b/compiled/gke-pvm-killer/manifests/gke-pvm-killer-bundle.yml
@@ -63,7 +63,7 @@ spec:
           volumeMounts:
             - mountPath: /opt/secrets
               name: secrets
-      hostNetwork: 'false'
+      hostNetwork: false
       restartPolicy: Always
       terminationGracePeriodSeconds: 30
       volumes:
