--- a/compiled/pritunl/manifests/pritunl-bundle.yml
+++ b/compiled/pritunl/manifests/pritunl-bundle.yml
@@ -62,7 +62,7 @@ spec:
             - mountPath: /etc/pritunl.conf
               name: config
               subPath: pritunl.conf
-      hostNetwork: 'false'
+      hostNetwork: false
       restartPolicy: Always
       terminationGracePeriodSeconds: 30
       volumes:
