--- a/compiled/sock-shop/manifests/catalogue-bundle.yml
+++ b/compiled/sock-shop/manifests/catalogue-bundle.yml
@@ -66,7 +66,7 @@ spec:
             readOnlyRootFilesystem: true
             runAsNonRoot: true
             runAsUser: 10001
-      hostNetwork: 'false'
+      hostNetwork: false
       restartPolicy: Always
       terminationGracePeriodSeconds: 30
 ---
