--- a/compiled/sock-shop/manifests/user-db-bundle.yml
+++ b/compiled/sock-shop/manifests/user-db-bundle.yml
@@ -41,7 +41,7 @@ spec:
           volumeMounts:
             - mountPath: /tmp
               name: tmp-volume
-      hostNetwork: 'false'
+      hostNetwork: false
       restartPolicy: Always
       terminationGracePeriodSeconds: 30
       volumes:
