Added trivy sec scanner as new service

--- a/inventory/targets/examples/examples.yml
+++ b/inventory/targets/examples/examples.yml
@@ -3,6 +3,7 @@ classes:
   - components.mysql
   - components.logstash
   - components.filebeat
+  - components.trivy
 
 parameters:
   target_name: examples
