--- a/compiled/examples/manifests/filebeat-bundle.yml
+++ b/compiled/examples/manifests/filebeat-bundle.yml
@@ -82,7 +82,7 @@ spec:
             name: filebeat
           name: config
 ---
-apiVersion: rbac.authorization.k8s.io/v1beta1
+apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   labels:
@@ -108,7 +108,7 @@ rules:
       - watch
       - list
 ---
-apiVersion: rbac.authorization.k8s.io/v1beta1
+apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   labels:
@@ -121,4 +121,4 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: filebeat
-    namespace: filebeat
+    namespace: examples
