--- a/compiled/tesoro/manifests/tesoro-bundle.yml
+++ b/compiled/tesoro/manifests/tesoro-bundle.yml
@@ -164,7 +164,7 @@ spec:
           labels:
             severity: warning
 ---
-apiVersion: rbac.authorization.k8s.io/v1beta1
+apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   labels:
@@ -190,7 +190,7 @@ rules:
     verbs:
       - '*'
 ---
-apiVersion: rbac.authorization.k8s.io/v1beta1
+apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   labels:
