Fix default_mode on volumes

--- a/inventory/classes/components/echo-server.yml
+++ b/inventory/classes/components/echo-server.yml
@@ -91,6 +91,7 @@ parameters:
         config:
           mount: /opt/echo-service/echo-service.conf
           subPath: echo-service.conf
+          default_mode: 550
           versioned: true
           data:
             echo-service.conf:
