--- a/compiled/tutorial/manifests/echo-server-bundle.yml
+++ b/compiled/tutorial/manifests/echo-server-bundle.yml
@@ -68,6 +68,16 @@ spec:
               memory: 1G
             requests:
               memory: 1G
+          startupProbe:
+            failureThreshold: 3
+            httpGet:
+              path: /_ready
+              port: http
+              scheme: HTTP
+            initialDelaySeconds: 0
+            periodSeconds: 10
+            successThreshold: 1
+            timeoutSeconds: 5
           volumeMounts:
             - mountPath: /opt/echo-service/echo-service.conf
               name: config
