initial add for hashicorp vault

--- a/inventory/targets/examples/examples.yml
+++ b/inventory/targets/examples/examples.yml
@@ -4,6 +4,7 @@ classes:
   - components.logstash
   - components.filebeat
   - components.trivy
+  - components.vault
 
 parameters:
   target_name: examples
