--- a/compiled/prod-sockshop/manifests/sockshop.kapicorp.com.yml
+++ b/compiled/prod-sockshop/manifests/sockshop.kapicorp.com.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 data:
-  tls.crt: CERTIFICATE
-  tls.key: KEY
+  tls.crt: ZmNYUzVaaUZFYkFnNXEydGpUTGk2eTdtSUpCWkhqeS1aMlJYUGdMSWtPZw==
+  tls.key: UDlXRnhaUEpadVJCZ2Z6OXJ6bjJFTnV2SWtOWGlIb1RhMEZtcVVWcGNzQQ==
 kind: Secret
 metadata:
   labels:
