--- a/compiled/guestbook-argocd/argocd/repo-my-repo-name.yml
+++ b/compiled/guestbook-argocd/argocd/repo-my-repo-name.yml
@@ -1,9 +1,12 @@
 apiVersion: v1
 kind: Secret
 metadata:
+  annotations:
+    managed-by: argocd.argoproj.io
   labels:
-    name: repo-secret
-  name: repo-secret
+    argocd.argoproj.io/secret-type: repository
+    name: repo-my-repo-name
+  name: repo-my-repo-name
   namespace: argocd
 stringData:
   insecure: 'true'
