--- a/compiled/guestbook-argocd/argocd/guestbook-project-argo-appproject.yml
+++ b/compiled/guestbook-argocd/argocd/guestbook-project-argo-appproject.yml
@@ -6,10 +6,11 @@ metadata:
   name: guestbook-project
   namespace: argocd
 spec:
+  clusterResourceWhitelist:
+    - group: '*'
+      kind: '*'
   destinations:
-    - namespace: argocd
-      server: https://kubernetes.default.svc
-    - namespace: guestbook-argocd
-      server: https://kubernetes.default.svc
+    - namespace: '*'
+      server: '*'
   sourceRepos:
     - '*'
