--- a/inventory/classes/components/argoproj/cd/argocd-controller.yml
+++ b/inventory/classes/components/argoproj/cd/argocd-controller.yml
@@ -63,7 +63,7 @@ parameters:
             image: ${argocd:tools:selfsigned-certs:image}
             command: [sh, -c]
             args:
-              - wget --quiet --no-check-certificate https://vault.example.com:8200/v1/example_certs/ca/pem -O /selfsigned-certs/example.root.crt
+              - wget --quiet --no-check-certificate https://vault.example.com/v1/example_certs/ca/pem -O /selfsigned-certs/example.root.crt
             volumeMounts:
               - mountPath: /selfsigned-certs
                 name: selfsigned-certs
