added kadet generator for rabbitmq-operator

--- a/inventory/classes/kapitan/common.yml
+++ b/inventory/classes/kapitan/common.yml
@@ -3,6 +3,7 @@ classes:
   - kapitan.generators.kubernetes
   - kapitan.generators.argocd
   - kapitan.generators.terraform
+  - kapitan.generators.rabbitmq
 
 
 parameters:
